# resume-matcher

./: README.md  pyproject.toml
resume_matcher/: cli.py  extract.py  keywords.py  normalize.py  report.py  score.py
resume_matcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
resume_matcher/tests/: test_score.py
